# anonymous_enums

./: Cargo.toml  rust-toolchain.toml
anonymous_enums_proc_macro/: Cargo.toml
anonymous_enums_proc_macro/src/: lib.rs
examples/: tests.rs
src/: lib.rs
