[package]
name = "anonymous_enums_proc_macro"
version = "0.0.0"
authors = ["bluepython508 <bluepython508@users.noreply.github.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
itertools = "0.10.1"
syn = { version = "1.0.74", features = ["full"] }

